# wordswurst

./: README.md  ci.nix  default.nix  flake.nix  pyproject.toml  setup.cfg  test.nix  wordswurst.nix
.github/workflows/: ci.yml
tests/: README.md  article.scss  article.wwst  content.wwst  output
wordswurst/: __init__.py
