[metadata]
name = wordswurst
# version = attr: wordswurst.__version__
description = experiment in single-source text re-use, plaintext layout, and templating
# long_description = TODO
url = https://github.com/abathur/wordswurst
keywords = hmm
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
author = Travis A. Everett
author_email = travis.a.everett+wordswurst@gmail.com

[options]
zip_safe = False
include_package_data = True
packages = find:


[options.entry_points]
console_scripts =
    wordswurst = wordswurst:main
